# embedded

./: nazwy_zmiennych.txt
atmega328p-c/: CMakeLists.txt  toolchain.cmake
atmega328p-c/src/: main.c
